--- a/css/index.css
+++ b/css/index.css
@@ -228,3 +228,50 @@ li a:hover strong {
 .fade-in {
   opacity: 1;
 }
+
+.show-more-container {
+  text-align: center;
+  margin-top: 15px;
+}
+
+#showMoreLinks, #showLessLinks {
+  width: 80%; 
+  background-color: #61afef ;
+  color: white;
+  padding: 8px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  display: inline-flex; 
+  align-items: center;
+  justify-content: center;
+  font-size: 0.9em;
+}
+
+#showMoreLinks:hover, #showLessLinks:hover {
+  background-color: #528bff;
+}
+
+.arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid white; 
+  margin-left: 8px;
+  transition: transform 0.3s ease;
+}
+
+.arrow-up {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid white; 
+  margin-left: 8px;
+  transition: transform 0.3s ease;
+}
+
+#showMoreLinks:hover .arrow-down,
+#showLessLinks:hover .arrow-up {
+  transform: translateY(2px); 
+}
