--- a/css/index.css
+++ b/css/index.css
@@ -13,18 +13,17 @@ h3 {
   padding-bottom: 5px;
   margin-top: 15px;
   text-align: left;
-  transition: opacity 0.2s ease, color 0.2s ease; 
+  transition: opacity 0.2s ease, color 0.2s ease;
 }
 
 p {
   margin-bottom: 5px;
 }
 
-
 input[type="text"],
 textarea,
 #groupFilter,
-#groupInput { 
+#groupInput {
   width: calc(100% - 20px);
   padding: 8px 10px;
   margin-bottom: 15px;
@@ -44,10 +43,8 @@ textarea,
   font-weight: bold;
   font-size: 1.1em;
   color: #e06c75;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
-
-
 
 textarea {
   resize: vertical;
@@ -77,9 +74,9 @@ button:hover {
 
 /* edit and delete buttons */
 .link-actions {
-    display: flex;
-    justify-content: flex-start; 
-    margin-top: 10px; 
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 10px;
 }
 
 .delete-btn {
@@ -96,17 +93,17 @@ button:hover {
 }
 
 .edit-btn {
-  background-color: #61afef !important; 
+  background-color: #61afef !important;
   padding: 5px 8px !important;
   border-radius: 3px !important;
   font-size: 0.8em !important;
   width: auto !important;
   margin: 0 !important;
-  margin-right: 8px !important; 
+  margin-right: 8px !important;
 }
 
 .edit-btn:hover {
-  background-color: #528bff !important; 
+  background-color: #528bff !important;
 }
 
 ul {
@@ -148,11 +145,11 @@ li a:hover strong {
 }
 
 .link-group {
-    font-size: 0.8em;
-    color: #b7c7d4; 
-    margin-top: 3px;
-    font-style: italic;
-    margin-bottom: 5px; 
+  font-size: 0.8em;
+  color: #b7c7d4;
+  margin-top: 3px;
+  font-style: italic;
+  margin-bottom: 5px;
 }
 
 .link-notes {
@@ -163,18 +160,18 @@ li a:hover strong {
 }
 
 #groupInput {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background-image: url('data:image/svg+xml;utf8,<svg fill="%23abb2bf" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/><path d="M0 0h24v24H0z" fill="none"/></svg>');
-    background-repeat: no-repeat;
-    background-position: right 8px top 50%;
-    background-size: 18px auto;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url('data:image/svg+xml;utf8,<svg fill="%23abb2bf" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/><path d="M0 0h24v24H0z" fill="none"/></svg>');
+  background-repeat: no-repeat;
+  background-position: right 8px top 50%;
+  background-size: 18px auto;
 }
 
 #groupInput option {
-    background-color: #3b4048;
-    color: #abb2bf;
+  background-color: #3b4048;
+  color: #abb2bf;
 }
 
 #cancelEditButton {
@@ -198,20 +195,22 @@ li a:hover strong {
   margin-top: 15px;
 }
 
-#showMoreLinks, #showLessLinks {
-  width: 80%; 
-  background-color: #61afef ;
+#showMoreLinks,
+#showLessLinks {
+  width: 80%;
+  background-color: #61afef;
   color: white;
   padding: 8px 12px;
   border-radius: 4px;
   cursor: pointer;
-  display: inline-flex; 
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   font-size: 0.9em;
 }
 
-#showMoreLinks:hover, #showLessLinks:hover {
+#showMoreLinks:hover,
+#showLessLinks:hover {
   background-color: #528bff;
 }
 
@@ -220,7 +219,7 @@ li a:hover strong {
   height: 0;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
-  border-top: 5px solid white; 
+  border-top: 5px solid white;
   margin-left: 8px;
   transition: transform 0.3s ease;
 }
@@ -230,12 +229,12 @@ li a:hover strong {
   height: 0;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
-  border-bottom: 5px solid white; 
+  border-bottom: 5px solid white;
   margin-left: 8px;
   transition: transform 0.3s ease;
 }
 
 #showMoreLinks:hover .arrow-down,
 #showLessLinks:hover .arrow-up {
-  transform: translateY(2px); 
+  transform: translateY(2px);
 }
